--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=api-gateway
+
+server.port=8760
+spring.cloud.gateway.discovery.locator.enabled=true
+
+JWT_SECRET_KEY=KYe7czMc9CxG7NwnJz1uJNCv3JPrJA7PwvMXEXlnq1c=
